fixed fade-in animations and added dark mode properties to the disease tiles

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -216,3 +216,8 @@ transform: translateY(0);
     max-width: 290px;
     border-radius: 10px;
 }
+
+/* Tiles dark mode */
+[data-theme="dark"] .tile {
+    background-color: rgba(4, 43, 22, 0.73);
+}
